--- a/client/pages/Recon/recon.module.css
+++ b/client/pages/Recon/recon.module.css
@@ -16,6 +16,11 @@
     max-height: 70vh;
     overflow: auto;
     border-radius: 10rem;
+    border: solid 1px black;
+    background-image: url(/client/public/metal-texture-background.jpeg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .recon::-webkit-scrollbar {
@@ -33,10 +38,6 @@
     align-content: center;
     align-items: center;
     color: whitesmoke;
-    background-image: url(/client/public/metal-texture-background.jpeg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
 .article {
@@ -81,4 +82,11 @@
     color: whitesmoke;
     text-shadow: 2px 2px 2px black;
     font-size: 2rem;
+}
+
+#image {
+    border: solid 1px whitesmoke;
+    border-radius: 1rem;
+    width: auto;
+    height: 100%;
 }
